--- a/src/components/Banner.css
+++ b/src/components/Banner.css
@@ -1,4 +1,4 @@
-.home_banner {
+.banner {
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,7 +6,7 @@
     align-items: center;
 }
 
-.home-app-title {
+.banner-app-title {
     width: 100%;
     background-color: #AAC7FF;
     color: #000000;
