--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -1,6 +1,6 @@
 .banner {
     width: 100%;
-    height: 100%;
+    height: 60px;
     display: flex;
     justify-content: center;
     align-items: center;
