--- a/src/components/NewStackButton/NewStackButton.css
+++ b/src/components/NewStackButton/NewStackButton.css
@@ -1,3 +1,4 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 .new-stack-button {
   background-color: initial;
   background-image: linear-gradient(-180deg, #FF7E31, #E62C03);
@@ -9,6 +10,7 @@
   display: block;
   margin: 0 auto;
   margin-top: 20px;
+  margin-bottom: 20px;
   font-family: Inter,-apple-system,system-ui,Roboto,"Helvetica Neue",Arial,sans-serif;
   height: 40px;
   line-height: 40px;
@@ -27,6 +29,7 @@
   z-index: 9;
   border: 0;
   transition: box-shadow .2s;
+  font-family: 'Inter', sans-serif;
 }
 
 .new-stack-button:hover {
