--- a/src/pages/HomePage/HomePage.css
+++ b/src/pages/HomePage/HomePage.css
@@ -1,6 +1,24 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
 .home-container {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: start;
+    background:rgba(160, 197, 236, 0.7);
+    --webkit-backdrop-filter:blur(10px);
+    backdrop-filter:blur(10px);
+    height:100vh;
+}
+
+.stacks-container {
+    display: flex;
+    flex-direction: column;
+    padding: 0 20px;
+    font-family: 'Inter', sans-serif;
+}
+
+.stack-card-list {
+    display:flex;
+    flex-wrap:wrap;
+    margin-top: 15px;
+    gap: 20px;
+    width:80%;
 }
