create modal for users to make their own stack

--- a/src/components/NewStackButton/NewStackButton.css
+++ b/src/components/NewStackButton/NewStackButton.css
@@ -30,6 +30,7 @@
   border: 0;
   transition: box-shadow .2s;
   font-family: 'Inter', sans-serif;
+  cursor: pointer;
 }
 
 .new-stack-button:hover {
